--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,15 @@ before_install:
 
 script:
   - docker run -e CI=true tcicek/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region:  "us-east-1"
+  app:  "docker kurs"
+  env: "Dockerkurs-env"
+  bucket_name: "elasticbeanstalk-us-east-1-241346335287"
+  bucket_path: "docker kurs"
+  on:
+    bracnch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
   
